--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.11",
-    "nodemailer": "^6.7.0",
+    "protonmail-api": "^2.2.0",
     "uuidv4": "^6.2.12"
   }
 }
